more work in intro animation

--- a/prototypes/intro/index.html
+++ b/prototypes/intro/index.html
@@ -14,12 +14,15 @@
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script type="text/javascript" src="js/libs/easeljs-0.5.0.min.js"></script>
     <script type="text/javascript" src="js/libs/tweenjs-0.3.0.min.js"></script>
+    <script type="text/javascript" src="js/libs/preloadjs-0.2.0.min.js"></script>
     <script type="text/javascript" src="js/intro.js"></script>
 	</head>
 	<body>
 		<div class="wrap">
 			<div class="intro">
 				<canvas id="intro" width="900" height="500"></canvas>
+				<p class="intro-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
+				<div class="divider"></div>
 			</div><!-- end intro -->
 		</div><!-- end wrap -->
 	</body>
