Started the site folder, and moved the intro animation there, along with the beginning of the site structure

--- a/prototypes/intro/index.html
+++ b/prototypes/intro/index.html
@@ -19,6 +19,15 @@
 	</head>
 	<body>
 		<div class="wrap">
+			<nav class="mainnav">
+				<ul>
+					<li>SECTION</li>
+					<li>SECTION</li>
+					<li>SECTION</li>
+					<li>SECTION</li>
+					<li>SECTION</li>
+				</ul>
+			</nav>
 			<div class="intro">
 				<canvas id="intro" width="900" height="500"></canvas>
 				<p class="intro-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
