starting to break html into sections on homepage

--- a/site/index.html
+++ b/site/index.html
@@ -43,13 +43,16 @@
 				</nav>
 			</div><!-- end header-inner -->
 		</header>
-		<div class="wrap">
-			<div class="intro">
+		<section class="intro">
+			<div class="wrap">
 				<canvas id="intro" width="900" height="500"></canvas>
 				<p class="intro-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
 				<div class="divider"></div>
-			</div><!-- end intro -->
-			<section class="keyofferings">
+			</div><!-- end wrap -->
+		</section><!-- end intro -->
+		
+		<section class="keyofferings">
+			<div class="wrap">
 				<h1>Our key offerings include:</h1>
 				<ul class="keyofferings-list">
 					<li class="keyofferings-list-item">ENGINEERING</li>
@@ -59,7 +62,14 @@
 					<li class="keyofferings-list-item">INSIGHTS</li>
 					<li class="keyofferings-list-item">SYSTEMS THINKING</li>
 				</ul>
-			</section>
-		</div><!-- end wrap -->
+			</div>
+		</section><!-- end keyofferings -->
+		<section class="casestudies">
+			<div class="wrap">
+				<h1>ENGINEERING</h1>
+				<p>At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
+			</div>
+		</section>
+		
 	</body>
 </html>
