continued building out homepage

--- a/site/index.html
+++ b/site/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</header>
 		<section class="intro">
-			<div class="wrap">
+			<div class="row">
 				<canvas id="intro" width="900" height="500"></canvas>
 				<div class="caption">
 					<p class="body-copy intro-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
@@ -54,11 +54,11 @@
 				</div>
 				
 				<div class="divider"></div>
-			</div><!-- end wrap -->
+			</div><!-- end row -->
 		</section><!-- end intro -->
 		
 		<section class="keyofferings">
-			<div class="wrap">
+			<div class="row">
 				<h1>Our key offerings include:</h1>
 				<ul class="keyofferings-list">
 					<li class="keyofferings-list-item"><a href="#" class="engineering">ENGINEERING</a></li>
@@ -68,36 +68,36 @@
 					<li class="keyofferings-list-item"><a href="#" class="insights">INSIGHTS</a></li>
 					<li class="keyofferings-list-item"><a href="#" class="systhink">SYSTEMS THINKING</a></li>
 				</ul>
-			</div><!-- end wrap -->
+			</div><!-- end row -->
 			<div class="keyofferings-bottom">
 				<div class="center-tag"></div>
 			</div>
 		</section><!-- end keyofferings -->
 
 		<section class="casestudies">
-			<div class="wrap">
+			<div class="row">
 				<h1>ENGINEERING</h1>
 				<p class="body-copy casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
-			</div><!-- end wrap -->
-			<div class="casestudy">
+			</div><!-- end row -->
+			<article class="casestudy">
 				<div class="casestudy-content">
 					<ul class="paddles">
-						<li class="paddle prev">Prev</li>
-						<li class="paddle next">Next</li>
+						<li class="paddle prev"><a href="#">Prev</a></li>
+						<li class="paddle next"><a href="#">Next</a></li>
 					</ul>
-					<img src="" alt="" class="casestudy-header" />
+					<img src="img/casestudies/caption-anza.jpg" alt="ANZA Hand Carts" class="casestudy-content-header" />
 					<h1>RE-IMAGINING THE WHEEL WITH ANZA TECHNOLOGIES</h1>
 					<div class="casestudy-body">
 						<p>In resource-strapped Tanzania, farmers and their families spend an average of 5 hours a day carrying heavy loads of water, firewood, and food to their homes or market.</p> 
 						<p>Anza Technologies was working to create an affordable yet durable handcart for rural communities. They had some ideas - including wheels made of inflated 2 liter bottles - but needed a scalable solution suited for a rugged environment.</p>
-						<p>Over the course of 7 months, Catapult stepped in to provide user research, competitive analysis, design, prototyping, CAD development, and user testing.
-						Beginning with a competitive analysis of the handcart market, the Catapult team found there was a distinct gap between carts sold in stores with an upwards cost of $100 USD, and homemade carts which resembled wooden sleighs.</p>
+						<p>Over the course of 7 months, Catapult stepped in to provide user research, competitive analysis, design, prototyping, CAD development, and user testing.</p>
+						<p>Beginning with a competitive analysis of the handcart market, the Catapult team found there was a distinct gap between carts sold in stores with an upwards cost of $100 USD, and homemade carts which resembled wooden sleighs.</p>
 						<p>The team began designing a handcart better suited to our customers’ needs. Three designs were developed that would pack flat, ship easily, and retain their durability. These prototypes were sent to Tanzania along with Noel and Tyler. Working with the Matala community the field prototypes were tested, revised, reviewed and improved.</p>
 						<p>The result was a $20 USD hand cart capable of carrying 300lb over long, rugged paths, and maintained within the local community.
 						Related Posts</p>
 					</div>
 				</div>
-			</div>
+			</article><!-- end case study -->
 		</section><!-- end case studies -->
 		
 	</body>
