--- a/site/index.html
+++ b/site/index.html
@@ -13,16 +13,18 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <script src="js/libs/modernizr-2.6.1.min.js"></script>
     <script type="text/javascript">
     	var createjs = window; // assign the namespace to the window
     </script>
+    <script type="text/javascript" src="js/libs/modernizr-2.6.1.min.js"></script>
     <script type="text/javascript" src="//use.typekit.net/ljv7wxs.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script type="text/javascript" src="js/libs/easeljs-0.5.0.min.js"></script>
     <script type="text/javascript" src="js/libs/tweenjs-0.3.0.min.js"></script>
     <script type="text/javascript" src="js/libs/preloadjs-0.2.0.min.js"></script>
+    <script type="text/javascript" src="js/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/intro.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
 		<!--[if lt IE 7]>
@@ -79,13 +81,14 @@
 				<h1>ENGINEERING</h1>
 				<p class="body-copy casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
 			</div><!-- end row -->
-			<article class="casestudy">
+			<article class="casestudy row" id="anza">
+				<div class="casestudy-images"></div><!-- this is where images get loaded (via js) -->
 				<div class="casestudy-content">
 					<ul class="paddles">
 						<li class="paddle prev"><a href="#">Prev</a></li>
 						<li class="paddle next"><a href="#">Next</a></li>
 					</ul>
-					<img src="img/casestudies/caption-anza.jpg" alt="ANZA Hand Carts" class="casestudy-content-header" />
+					<img src="img/casestudies/handcart/caption.jpg" alt="ANZA Hand Carts" class="casestudy-content-header" />
 					<h1>RE-IMAGINING THE WHEEL WITH ANZA TECHNOLOGIES</h1>
 					<div class="casestudy-body">
 						<p>In resource-strapped Tanzania, farmers and their families spend an average of 5 hours a day carrying heavy loads of water, firewood, and food to their homes or market.</p> 
@@ -99,6 +102,34 @@
 				</div>
 			</article><!-- end case study -->
 		</section><!-- end case studies -->
+
+		<section class="team" id="team">
+			<div class="row">
+				<h1>Meet the Catapult <span class="emphasized title-first">Team</span>, <span class="emphasized title-second">Board</span> &amp; <span class="emphasized title-third">Advisors</span>.</h1>
+
+				<ul class="team-members">
+					<li class="team-member">
+						<img src="img/team/heather.jpg" />
+						<div class="team-member-details">
+							<h3>Heather Fleming</h3>
+							<h4>Founder &amp; CEO</h4>
+							<h5>Catapult Design</h5>
+							<p>Heather is a designer, an engineer, and an entrepreneur <a href="#" class="more">more</a></p>
+						</div>
+					</li><!-- end Heather -->
+
+					<li class="team-member">
+						<img src="img/team/tyler.jpg" />
+						<div class="team-member-details">
+							<h3>Tyler Valiquette</h3>
+							<h4>Founder &amp; CEO</h4>
+							<h5>Catapult Design</h5>
+							<p>Heather is a designer, an engineer, and an entrepreneur <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section><!-- end team -->
 		
 	</body>
 </html>
