more changes on homepage

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
 				</ul>
 			</nav>
 			<div class="header-divider"></div>
-			<div class="header-bottom">
+			<div class="section-bottom">
 				<div class="center-tag"></div>
 			</div>
 		</header>
@@ -71,16 +71,16 @@
 					<li class="keyofferings-list-item"><a href="#" class="systhink">SYSTEMS THINKING</a></li>
 				</ul>
 			</div><!-- end row -->
-			<div class="keyofferings-bottom">
+			<div class="section-bottom">
 				<div class="center-tag"></div>
 			</div>
 		</section><!-- end keyofferings -->
 
-		<section class="casestudies">
-			<div class="row">
-				<h1>ENGINEERING</h1>
-				<p class="body-copy casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
-			</div><!-- end row -->
+		<section class="casestudies row">
+				<div class="row-header">
+					<h1>ENGINEERING</h1>
+					<p class="body-copy casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
+				</div>
 			<article class="casestudy row" id="anza">
 				<div class="casestudy-images"></div><!-- this is where images get loaded (via js) -->
 				<div class="casestudy-content">
@@ -131,5 +131,11 @@
 			</div>
 		</section><!-- end team -->
 		
+		<section class="locations row">
+			<h1>CATAPULT PROJECTS</h1>
+		</section><!-- end locations -->
+		<section class="contact row">
+			<h1><span class="emphasized title-first">FOLLOW</span>, <span class="emphasized title-second">LIKE</span> &amp; <span class="emphasized title-third">CONTACT</span> Us.</h1>
+		</section><!-- end contact -->
 	</body>
 </html>
