more edits to homepage

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,6 @@
 		<meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
     <script type="text/javascript">
@@ -43,11 +42,10 @@
 				</ul>
 			</nav>
 			<div class="header-divider"></div>
-			<div class="section-bottom">
-				<div class="center-tag"></div>
-			</div>
 		</header>
+
 		<section class="intro">
+			<div class="center-tag"></div>
 			<div class="row">
 				<canvas id="intro" width="900" height="500"></canvas>
 				<div class="caption">
@@ -71,71 +69,218 @@
 					<li class="keyofferings-list-item"><a href="#" class="systhink">SYSTEMS THINKING</a></li>
 				</ul>
 			</div><!-- end row -->
-			<div class="section-bottom">
-				<div class="center-tag"></div>
-			</div>
 		</section><!-- end keyofferings -->
 
-		<section class="casestudies row">
+		<section class="casestudies">
+			<div class="center-tag"></div>
+			<div class="row">
 				<div class="row-header">
 					<h1>ENGINEERING</h1>
 					<p class="body-copy casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
 				</div>
-			<article class="casestudy row" id="anza">
-				<div class="casestudy-images"></div><!-- this is where images get loaded (via js) -->
-				<div class="casestudy-content">
-					<ul class="paddles">
-						<li class="paddle prev"><a href="#">Prev</a></li>
-						<li class="paddle next"><a href="#">Next</a></li>
-					</ul>
-					<img src="img/casestudies/handcart/caption.jpg" alt="ANZA Hand Carts" class="casestudy-content-header" />
-					<h1>RE-IMAGINING THE WHEEL WITH ANZA TECHNOLOGIES</h1>
-					<div class="casestudy-body">
-						<p>In resource-strapped Tanzania, farmers and their families spend an average of 5 hours a day carrying heavy loads of water, firewood, and food to their homes or market.</p> 
-						<p>Anza Technologies was working to create an affordable yet durable handcart for rural communities. They had some ideas - including wheels made of inflated 2 liter bottles - but needed a scalable solution suited for a rugged environment.</p>
-						<p>Over the course of 7 months, Catapult stepped in to provide user research, competitive analysis, design, prototyping, CAD development, and user testing.</p>
-						<p>Beginning with a competitive analysis of the handcart market, the Catapult team found there was a distinct gap between carts sold in stores with an upwards cost of $100 USD, and homemade carts which resembled wooden sleighs.</p>
-						<p>The team began designing a handcart better suited to our customers’ needs. Three designs were developed that would pack flat, ship easily, and retain their durability. These prototypes were sent to Tanzania along with Noel and Tyler. Working with the Matala community the field prototypes were tested, revised, reviewed and improved.</p>
-						<p>The result was a $20 USD hand cart capable of carrying 300lb over long, rugged paths, and maintained within the local community.
-						Related Posts</p>
-					</div>
-				</div>
+				<article class="casestudy row" id="anza">
+					<div class="casestudy-images"></div><!-- this is where images get loaded (via js) -->
+					<div class="casestudy-content">
+						<ul class="paddles">
+							<li class="paddle prev"><a href="#">Prev</a></li>
+							<li class="paddle next"><a href="#">Next</a></li>
+						</ul>
+						<img src="img/casestudies/handcart/caption.jpg" alt="ANZA Hand Carts" class="casestudy-content-header" />
+						<h1>RE-IMAGINING THE WHEEL WITH ANZA TECHNOLOGIES</h1>
+						<div class="casestudy-body">
+							<p>In resource-strapped Tanzania, farmers and their families spend an average of 5 hours a day carrying heavy loads of water, firewood, and food to their homes or market.</p> 
+							<p>Anza Technologies was working to create an affordable yet durable handcart for rural communities. They had some ideas - including wheels made of inflated 2 liter bottles - but needed a scalable solution suited for a rugged environment.</p>
+							<p>Over the course of 7 months, Catapult stepped in to provide user research, competitive analysis, design, prototyping, CAD development, and user testing.</p>
+							<p>Beginning with a competitive analysis of the handcart market, the Catapult team found there was a distinct gap between carts sold in stores with an upwards cost of $100 USD, and homemade carts which resembled wooden sleighs.</p>
+							<p>The team began designing a handcart better suited to our customers’ needs. Three designs were developed that would pack flat, ship easily, and retain their durability. These prototypes were sent to Tanzania along with Noel and Tyler. Working with the Matala community the field prototypes were tested, revised, reviewed and improved.</p>
+							<p>The result was a $20 USD hand cart capable of carrying 300lb over long, rugged paths, and maintained within the local community.
+							Related Posts</p>
+						</div>
+					</div><!-- end row -->
+			</div>
 			</article><!-- end case study -->
 		</section><!-- end case studies -->
 
 		<section class="team" id="team">
 			<div class="row">
-				<h1>Meet the Catapult <span class="emphasized title-first">Team</span>, <span class="emphasized title-second">Board</span> &amp; <span class="emphasized title-third">Advisors</span>.</h1>
+				<h1>Meet the Catapult <span class="emphasized level-one">Team</span>, <span class="emphasized level-two">Board</span> &amp; <span class="emphasized level-three">Advisors</span>.</h1>
 
 				<ul class="team-members">
-					<li class="team-member">
+					<li class="team-member primary">
 						<img src="img/team/heather.jpg" />
 						<div class="team-member-details">
 							<h3>Heather Fleming</h3>
 							<h4>Founder &amp; CEO</h4>
 							<h5>Catapult Design</h5>
-							<p>Heather is a designer, an engineer, and an entrepreneur <a href="#" class="more">more</a></p>
+							<p>Heather is a designer, an engineer, and an entrepreneur motivated by social... <a href="#" class="more">more</a></p>
 						</div>
 					</li><!-- end Heather -->
 
-					<li class="team-member">
+					<li class="team-member primary">
 						<img src="img/team/tyler.jpg" />
 						<div class="team-member-details">
 							<h3>Tyler Valiquette</h3>
-							<h4>Founder &amp; CEO</h4>
+							<h4>Founder &amp; COO</h4>
 							<h5>Catapult Design</h5>
-							<p>Heather is a designer, an engineer, and an entrepreneur <a href="#" class="more">more</a></p>
+							<p>Having lived, worked, and traveled extensively in Latin America in his mid... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member primary">
+						<img src="img/team/noel.jpg" />
+						<div class="team-member-details">
+							<h3>Noel Wilson</h3>
+							<h4>Lead Designer</h4>
+							<h5>Catapult Design</h5>
+							<p>An Industrial Designer by training, Noel previously worked in rapid prototyp... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member primary col-last">
+						<img src="img/team/charlie.jpg" />
+						<div class="team-member-details">
+							<h3>Dr. Charlie Sellers</h3>
+							<h4>Technology Specialist</h4>
+							<h5>Catapult Design</h5>
+							<p>Combining a background in materials and processes with manufacturing managem... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member primary">
+						<img src="img/team/karin.jpg" />
+						<div class="team-member-details">
+							<h3>Karin Carter</h3>
+							<h4>Design Fellow</h4>
+							<h5>Catapult Design</h5>
+							<p>Karin is a designer and educator with diverse expertise as each. As an in-house... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member secondary">
+						<img src="img/team/catherine.jpg" />
+						<div class="team-member-details">
+							<h3>Catherine Howard Lovazzano</h3>
+							<h4>Senior Manager, Consumer Trends</h4>
+							<h5>Chrysler LLC</h5>
+							<p>In her current position, Catherine leads a hybrid team of social scientists,... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member secondary">
+						<img src="img/team/graham.jpg" />
+						<div class="team-member-details">
+							<h3>Graham Hill</h3>
+							<h4>VP Interactive Planet Green, Discovery Communications Founder</h4>
+							<h5>Treehugger.com</h5>
+							<p>Alternately described as serial entrepreneur, do-gooder and... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member col-last secondary">
+						<img src="img/team/dawn.jpg" />
+						<div class="team-member-details">
+							<h3>Dawn Danby</h3>
+							<h4>Senior Sustainability Design Manager</h4>
+							<h5>Autodesk</h5>
+							<p>Interdisciplinary designer Dawn Danby, recognized by Fast Company as... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member secondary">
+						<img src="img/team/tom.jpg" />
+						<div class="team-member-details">
+							<h3>Tom Loughlin</h3>
+							<h4>Executive Director</h4>
+							<h5>ASME</h5>
+							<p>Thomas G. Loughlin, CAE, is the executive director of ASME (American So... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member secondary">
+						<img src="img/team/hristo.jpg" />
+						<div class="team-member-details">
+							<h3>Hristo Gyoshev</h3>
+							<h4>Corporate Strategy &amp; Business Management</h4>
+							<h5>Yahoo! Inc.</h5>
+							<p>Hristo Gyoshev is a strategist with broad interest in business, technology,... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member tertiary">
+						<img src="img/team/brian.jpg" />
+						<div class="team-member-details">
+							<h3>Brian Lamb</h3>
+							<h4>Principal</h4>
+							<h5>Elevate Consulting</h5>
+							<p>Brian Lamb is a visionary business and design leader at Elevate Design Cons... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member col-last tertiary">
+						<img src="img/team/evan.jpg" />
+						<div class="team-member-details">
+							<h3>Evan Thomas</h3>
+							<h4>Asst Professor</h4>
+							<h5>Portland State University</h5>
+							<p>Evan A. Thomas, Ph.D., P.E., is an Assistant Professor and Director of the S... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member tertiary">
+						<img src="img/team/nathalie.jpg" />
+						<div class="team-member-details">
+							<h3>Nathalie Collins</h3>
+							<h4>Design Strategist</h4>
+							<h5>Luminary Labs</h5>
+							<p>Nathalie Collins is a designer and innovator who has worked with businesses... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member tertiary">
+						<img src="img/team/gary.jpg" />
+						<div class="team-member-details">
+							<h3>Gary Zieff</h3>
+							<h4>COO</h4>
+							<h5>dissigno</h5>
+							<p>Gary Zieff co-founded dissigno, an emerging markets project developmen... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member tertiary">
+						<img src="img/team/lauren.jpg" />
+						<div class="team-member-details">
+							<h3>Lauren Peters</h3>
+							<h4>Art Director</h4>
+							<h5>Salesforce, Inc</h5>
+							<p>Lauren Peters began her work with Catapult Design in early 2009, contributi... <a href="#" class="more">more</a></p>
+						</div>
+					</li>
+
+					<li class="team-member col-last tertiary">
+						<img src="img/team/joseph.jpg" />
+						<div class="team-member-details">
+							<h3>Joseph Beah</h3>
+							<h4>Solutions Architect and Program Manager</h4>
+							<h5></h5>
+							<p>Joseph is a seasoned Program Manager and Solutions Architect with a passion... <a href="#" class="more">more</a></p>
 						</div>
 					</li>
 				</ul>
 			</div>
 		</section><!-- end team -->
 		
-		<section class="locations row">
-			<h1>CATAPULT PROJECTS</h1>
+		<section class="locations">
+			<div class="center-tag"></div>
+			<div class="row">
+				<h1>CATAPULT PROJECTS</h1>
+				<div class="locations-map">
+					<img src="img/locations/map.png" alt="Where in the corld is Catapult?" />
+				</div>
+			</div><!-- end row -->
 		</section><!-- end locations -->
+
 		<section class="contact row">
-			<h1><span class="emphasized title-first">FOLLOW</span>, <span class="emphasized title-second">LIKE</span> &amp; <span class="emphasized title-third">CONTACT</span> Us.</h1>
+			<h1><span class="emphasized level-one">FOLLOW</span>, <span class="emphasized level-two">LIKE</span> &amp; <span class="emphasized level-three">CONTACT</span> Us.</h1>
 		</section><!-- end contact -->
 	</body>
 </html>
