more homepage changes

--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="js/libs/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/intro.js"></script>
     <script type="text/javascript" src="js/casestudies.js"></script>
+    <script type="text/javascript" src="js/team.js"></script>
+    <script type="text/javascript" src="js/locations.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
@@ -85,7 +87,16 @@
 					<h1>CASE STUDY: ENGINEERING</h1>
 					<p class="casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
 				</div>
-				<div id="casestudies-container"></div>
+				<div id="casestudies-container">
+					<article class="casestudy row" id="">
+						<div class="casestudy-images"></div>
+						<div id="casestudy-content"><div id="casestudy-content-sub"></div></div>
+						<ul class="paddles">
+							<li class="paddle prev"><a href="#" id="casestudy-paddle-prev">Prev</a></li>
+							<li class="paddle next"><a href="#" id="casestudy-paddle-next">Next</a></li>
+						</ul>
+					</article>
+				</div><!-- end casestudies-container -->
 			</div><!-- end row -->
 		</section><!-- end case studies -->
 
