more change to homepage

--- a/site/index.html
+++ b/site/index.html
@@ -70,34 +70,32 @@
 			<div class="row">
 				<h1>Our key offerings include:</h1>
 				<ul class="keyofferings-list">
-					<li class="keyofferings-list-item"><a href="#" class="engineering">ENGINEERING</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="ideation">IDEATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="innovation">TECHNOLOGY INNOVATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="education">EDUCATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="insights">INSIGHTS</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="systhink">SYSTEMS THINKING</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="engineering" id="keyoffering-engineering-button">ENGINEERING</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="ideation" id="keyoffering-ideation-button">IDEATION</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="innovation" id="keyoffering-innovation-button">TECHNOLOGY INNOVATION</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="education" id="keyoffering-education-button">EDUCATION</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="insights" id="keyoffering-insights-button">INSIGHTS</a></li>
+					<li class="keyofferings-list-item"><a href="#" class="systhink" id="keyoffering-systems-button">SYSTEMS THINKING</a></li>
 				</ul>
 			</div><!-- end row -->
 		</section><!-- end keyofferings -->
 
-		<section class="casestudies drawer">
+		<section class="casestudies drawer row engineering">
 			<div class="center-tag"></div>
-			<div class="row">
-				<div class="row-header">
-					<h1>CASE STUDY: ENGINEERING</h1>
-					<p class="casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
-				</div>
-				<div id="casestudies-container">
-					<article class="casestudy row" id="">
-						<div class="casestudy-images"></div>
-						<div id="casestudy-content"><div id="casestudy-content-sub"></div></div>
-						<ul class="paddles">
-							<li class="paddle prev"><a href="#" id="casestudy-paddle-prev">Prev</a></li>
-							<li class="paddle next"><a href="#" id="casestudy-paddle-next">Next</a></li>
-						</ul>
-					</article>
-				</div><!-- end casestudies-container -->
-			</div><!-- end row -->
+			<div class="row-header">
+				<h1>CASE STUDY: ENGINEERING</h1>
+				<p class="casestudies-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
+			</div>
+			<div id="casestudies-container">
+				<article class="casestudy row" id="">
+					<div class="casestudy-images"><div id="casestudy-images-sub"></div></div>
+					<div id="casestudy-content"><div id="casestudy-content-sub"></div></div>
+					<ul class="paddles">
+						<li class="paddle prev"><a href="#" id="casestudy-paddle-prev"><img src="img/arrow-left.png" /></a></li>
+						<li class="paddle next"><a href="#" id="casestudy-paddle-next"><img src="img/arrow-right.png" /></a></li>
+					</ul>
+				</article>
+			</div><!-- end casestudies-container -->
 		</section><!-- end case studies -->
 
 		<section class="team" id="team">
