more homepage changes

--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 				<canvas id="intro" width="900" height="500"></canvas>
 				<div class="caption">
-					<p class="intro-desc">At Catapult, our hands-on teams work with your company on x, y, and z. Our Not-for-profit is dedicated to facilitating... and educational programs...where companies can meet, learn, work, and share. We invest in ... so other people may thrive. Something else goes here for a nice line break.</p>
+					<p class="intro-desc">Catapult Design is a non-profit design firm providing engineering and implementation support to the thousands of organizations in need of technologies or products. The net benefit of our activities is nothing less than a fundamental improvement in the lives of those who need it most.</p>
 					<a href="#" class="what-we-do">What we do</a>
 				</div>
 				
