--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/libs/tweenjs-0.3.0.min.js"></script>
     <script type="text/javascript" src="js/libs/preloadjs-0.2.0.min.js"></script>
     <script type="text/javascript" src="js/libs/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="js/ImagePreloader.js"></script>
     <script type="text/javascript" src="js/intro.js"></script>
     <script type="text/javascript" src="js/casestudies.js"></script>
     <script type="text/javascript" src="js/team.js"></script>
