--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,6 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -41,7 +40,7 @@
     	</ul>
     </div><!-- end floater -->
     <header class="header">
-			<object class="logo" data="img/catapult-logo.svg" type="image/svg+xml"></object>
+			<object class="logo" data="img/homepage/catapult-logo.svg" type="image/svg+xml"></object>
 			<nav class="mainnav">
 				<ul>
 					<li class="mainnav-item">PROJECTS</li>
@@ -71,17 +70,18 @@
 			<div class="row">
 				<h1>Our key offerings include:</h1>
 				<ul class="keyofferings-list">
-					<li class="keyofferings-list-item"><a href="#" class="engineering" id="keyoffering-engineering-button">ENGINEERING</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="ideation" id="keyoffering-ideation-button">IDEATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="innovation" id="keyoffering-innovation-button">TECHNOLOGY INNOVATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="education" id="keyoffering-education-button">EDUCATION</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="insights" id="keyoffering-insights-button">INSIGHTS</a></li>
-					<li class="keyofferings-list-item"><a href="#" class="systhink" id="keyoffering-systems-button">SYSTEMS THINKING</a></li>
+					<li class="keyofferings-list-item" id="engineering"><a href="#" class="engineering" id="keyoffering-engineering-button">ENGINEERING</a></li>
+					<li class="keyofferings-list-item" id="ideation"><a href="#" class="ideation" id="keyoffering-ideation-button">IDEATION</a></li>
+					<li class="keyofferings-list-item" id="innovation"><a href="#" class="innovation" id="keyoffering-innovation-button">TECHNOLOGY INNOVATION</a></li>
+					<li class="keyofferings-list-item" id="education"><a href="#" class="education" id="keyoffering-education-button">EDUCATION</a></li>
+					<li class="keyofferings-list-item" id="insights"><a href="#" class="insights" id="keyoffering-insights-button">INSIGHTS</a></li>
+					<li class="keyofferings-list-item" id="systhink"><a href="#" class="systhink" id="keyoffering-systems-button">SYSTEMS THINKING</a></li>
 				</ul>
 			</div><!-- end row -->
 		</section><!-- end keyofferings -->
 
-		<section class="casestudies drawer row engineering">
+		<section class="casestudies drawer row">
+			<div id="casestudies-bg"></div>
 			<div class="center-tag"></div>
 			<div class="row-header">
 				<h1>CASE STUDY: ENGINEERING</h1>
@@ -92,8 +92,8 @@
 					<div class="casestudy-images"><div id="casestudy-images-sub"></div></div>
 					<div id="casestudy-content"><div id="casestudy-content-sub"></div></div>
 					<ul class="paddles">
-						<li class="paddle prev"><a href="#" id="casestudy-paddle-prev"><img src="img/arrow-left.png" /></a></li>
-						<li class="paddle next"><a href="#" id="casestudy-paddle-next"><img src="img/arrow-right.png" /></a></li>
+						<li class="paddle prev"><a href="#" id="casestudy-paddle-prev"><img src="img/homepage/casestudies/arrow-left.png" /></a></li>
+						<li class="paddle next"><a href="#" id="casestudy-paddle-next"><img src="img/homepage/casestudies/arrow-right.png" /></a></li>
 					</ul>
 				</article>
 			</div><!-- end casestudies-container -->
@@ -105,7 +105,7 @@
 
 				<ul class="team-members">
 					<li class="team-member primary">
-						<img src="img/team/heather.jpg" />
+						<img src="img/homepage/team/heather.jpg" />
 						<div class="team-member-details">
 							<h3>Heather Fleming</h3>
 							<h4>Founder &amp; CEO</h4>
@@ -115,7 +115,7 @@
 					</li><!-- end Heather -->
 
 					<li class="team-member primary">
-						<img src="img/team/tyler.jpg" />
+						<img src="img/homepage/team/tyler.jpg" />
 						<div class="team-member-details">
 							<h3>Tyler Valiquette</h3>
 							<h4>Founder &amp; COO</h4>
@@ -125,7 +125,7 @@
 					</li>
 
 					<li class="team-member primary">
-						<img src="img/team/noel.jpg" />
+						<img src="img/homepage/team/noel.jpg" />
 						<div class="team-member-details">
 							<h3>Noel Wilson</h3>
 							<h4>Lead Designer</h4>
@@ -135,7 +135,7 @@
 					</li>
 
 					<li class="team-member primary col-last">
-						<img src="img/team/charlie.jpg" />
+						<img src="img/homepage/team/charlie.jpg" />
 						<div class="team-member-details">
 							<h3>Dr. Charlie Sellers</h3>
 							<h4>Technology Specialist</h4>
@@ -145,7 +145,7 @@
 					</li>
 
 					<li class="team-member primary">
-						<img src="img/team/karin.jpg" />
+						<img src="img/homepage/team/karin.jpg" />
 						<div class="team-member-details">
 							<h3>Karin Carter</h3>
 							<h4>Design Fellow</h4>
@@ -155,7 +155,7 @@
 					</li>
 
 					<li class="team-member secondary">
-						<img src="img/team/catherine.jpg" />
+						<img src="img/homepage/team/catherine.jpg" />
 						<div class="team-member-details">
 							<h3>Catherine Howard Lovazzano</h3>
 							<h4>Senior Manager, Consumer Trends</h4>
@@ -165,7 +165,7 @@
 					</li>
 
 					<li class="team-member secondary">
-						<img src="img/team/graham.jpg" />
+						<img src="img/homepage/team/graham.jpg" />
 						<div class="team-member-details">
 							<h3>Graham Hill</h3>
 							<h4>VP Interactive Planet Green, Discovery Communications Founder</h4>
@@ -175,7 +175,7 @@
 					</li>
 
 					<li class="team-member col-last secondary">
-						<img src="img/team/dawn.jpg" />
+						<img src="img/homepage/team/dawn.jpg" />
 						<div class="team-member-details">
 							<h3>Dawn Danby</h3>
 							<h4>Senior Sustainability Design Manager</h4>
@@ -185,7 +185,7 @@
 					</li>
 
 					<li class="team-member secondary">
-						<img src="img/team/tom.jpg" />
+						<img src="img/homepage/team/tom.jpg" />
 						<div class="team-member-details">
 							<h3>Tom Loughlin</h3>
 							<h4>Executive Director</h4>
@@ -195,7 +195,7 @@
 					</li>
 
 					<li class="team-member secondary">
-						<img src="img/team/hristo.jpg" />
+						<img src="img/homepage/team/hristo.jpg" />
 						<div class="team-member-details">
 							<h3>Hristo Gyoshev</h3>
 							<h4>Corporate Strategy &amp; Business Management</h4>
@@ -205,7 +205,7 @@
 					</li>
 
 					<li class="team-member tertiary">
-						<img src="img/team/brian.jpg" />
+						<img src="img/homepage/team/brian.jpg" />
 						<div class="team-member-details">
 							<h3>Brian Lamb</h3>
 							<h4>Principal</h4>
@@ -215,7 +215,7 @@
 					</li>
 
 					<li class="team-member col-last tertiary">
-						<img src="img/team/evan.jpg" />
+						<img src="img/homepage/team/evan.jpg" />
 						<div class="team-member-details">
 							<h3>Evan Thomas</h3>
 							<h4>Asst Professor</h4>
@@ -225,7 +225,7 @@
 					</li>
 
 					<li class="team-member tertiary">
-						<img src="img/team/nathalie.jpg" />
+						<img src="img/homepage/team/nathalie.jpg" />
 						<div class="team-member-details">
 							<h3>Nathalie Collins</h3>
 							<h4>Design Strategist</h4>
@@ -235,7 +235,7 @@
 					</li>
 
 					<li class="team-member tertiary">
-						<img src="img/team/gary.jpg" />
+						<img src="img/homepage/team/gary.jpg" />
 						<div class="team-member-details">
 							<h3>Gary Zieff</h3>
 							<h4>COO</h4>
@@ -245,7 +245,7 @@
 					</li>
 
 					<li class="team-member tertiary">
-						<img src="img/team/lauren.jpg" />
+						<img src="img/homepage/team/lauren.jpg" />
 						<div class="team-member-details">
 							<h3>Lauren Peters</h3>
 							<h4>Art Director</h4>
@@ -255,7 +255,7 @@
 					</li>
 
 					<li class="team-member col-last tertiary">
-						<img src="img/team/joseph.jpg" />
+						<img src="img/homepage/team/joseph.jpg" />
 						<div class="team-member-details">
 							<h3>Joseph Beah</h3>
 							<h4>Solutions Architect and Program Manager</h4>
@@ -265,6 +265,7 @@
 					</li>
 				</ul>
 			</div>
+
 		</section><!-- end team -->
 		
 		<section class="locations">
